test/error/E40.chimod
{
	"dependencies": [23],
	"has_c_support": false
}
